# fibirr-GUI

./: .gitignore  GUI.pyw  PyQt5_fulldemo.pyw  README.md  TEST_Dark_.csv  TEST_RefDarkCorr_.csv  TEST_Ref_.csv  TODO.md  _Int_2416765640.csv  analog_io.py  analog_io.ui  analog_io_demo.py  avaspec.py  digital_io.ui  digital_io_demo.py  eeprom.ui  eeprom_demo.py  globals.py  plot.py  plot_qwt.py  pyproject.toml  qtdemo.py  qtdemo.ui  qtdemo_original.py  qtdemo_original.ui  qtdemo_v3.py  simpleGUI.pyw  simplerGUI_pollscan.pyw
Arduino/ArduinoCode_DAC-0to5V/: ArduinoCode_DAC-0to5V.ino
UIs/: MainWindow.py  MainWindow.ui  MainWindow_large.py  convert_ui_to_py.txt  digital_io.py  eeprom.py  form1.py  form1.ui  qtdemo.py  qtdemo.ui
previous_versions/: PyQt5_fulldemo.pyw  simpleGUI_callback.pyw  simplerGUI.pyw
previous_versions/originalfiles/: PyQt5_fulldemo.pyw  plot_mpl.py  plot_points.py
tests/: 2107362U1_0001.Raw8  2107362U1_0002.Raw8  2107362U1_0003.Raw8  2107362U1_0004.Raw8  2107362U1_0005.Raw8  2107362U1_0006.Raw8  2107362U1_0007.Raw8  2107362U1_0008.Raw8  2107362U1_0009.Raw8  2107362U1_0010.Raw8  2107362U1_0011.Raw8  2107362U1_0012.Raw8  2107362U1_0013.Raw8  2107362U1_0014.Raw8  2107362U1_0015.Raw8  2107362U1_0016.Raw8  2107362U1_0017.Raw8  2107362U1_0018.Raw8  2107362U1_0019.Raw8  2107362U1_0020.Raw8  2107362U1_0021.Raw8  2107362U1_0022.Raw8  2107362U1_0023.Raw8  2107362U1_0024.Raw8  2107362U1_0025.Raw8  2107362U1_0026.Raw8  2107362U1_0027.Raw8  2107362U1_0028.Raw8  2107362U1_0029.Raw8  2107362U1_0030.Raw8  2107362U1_0031.Raw8  2107362U1_0032.Raw8  2107362U1_0033.Raw8  2107362U1_0034.Raw8  2107362U1_0035.Raw8  2107362U1_0036.Raw8  2107362U1_0037.Raw8  2107362U1_0038.Raw8  2107362U1_0039.Raw8  2107362U1_0040.Raw8  (+17 more)
tools/: LED_control.py  data_handling.py  settings.py
user/: settings.py
user/back-up/: Dark.csv  Ref.csv  Ref_DarkCorr.csv  Ref_DarkSLSCorr.csv
